--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,264 +1,204 @@
-.container, body {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox
-}
-
-@font-face {
-    font-family: 'Noto Serif';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Noto Serif'), local('NotoSerif'), url(https://fonts.gstatic.com/s/notoserif/v8/ga6Iaw1J5X9T9RW6j9bNfFMWbQ.ttf) format('truetype')
-}
-
-@font-face {
-    font-family: 'PT Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v11/jizaRExUiTo99u79D0aEwA.ttf) format('truetype')
-}
-
+@import url("https://fonts.googleapis.com/css?family=Noto+Serif&display=swap&subset=cyrillic");
+@import url("https://fonts.googleapis.com/css?family=PT+Sans&display=swap&subset=cyrillic");
 body {
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    background: url(../img/background.png), 0 0;
-    font-family: "PT Sans", sans-serif
-}
-
-.card, .container {
-    -webkit-flex-direction: column;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal
-}
-
-.order__price, .order__price span {
-    font-family: 'Noto Serif', serif
-}
-
-body:before {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: url("../img/background.png"), repeat;
+  font-family: "PT Sans", sans-serif; }
+  body:before {
     content: '';
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     width: 100%;
-    background: -webkit-gradient(linear, left bottom, left top, from(rgba(228, 208, 170, .55)), to(rgba(0, 0, 0, 0)));
-    background: -o-linear-gradient(bottom, rgba(228, 208, 170, .55), rgba(0, 0, 0, 0));
-    background: linear-gradient(to top, rgba(228, 208, 170, .55), rgba(0, 0, 0, 0))
-}
-
-.container {
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center
-}
-
-.box, .card {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox
-}
-
-.box, .h1 {
-    -webkit-box-pack: center
-}
-
-.box {
-    display: flex;
-    width: auto;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    margin: 0 auto;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap
-}
-
-.card {
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    max-width: 360px;
-    position: relative;
-    background-color: #fff;
-    margin: 17px
-}
-
-.card__content, .card__text {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox
-}
-
-.card:hover .card__image:before {
-    content: "";
-    background: url(../img/best_price.png) no-repeat;
-    margin: 5px;
-    padding: 5px;
-    position: absolute;
-    height: 50px;
-    width: 50px
-}
-
-.card:hover .card__content {
-    border: solid #fff;
-    border-top: none
-}
-
-.card__content {
-    padding: 0 20px 30px;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    text-align: center;
-    height: 100%;
-    border: solid #d0bfa17d;
-    border-top: none
-}
-
-.card__text {
-    display: flex;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-    margin-bottom: 18px;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    line-height: 22px
-}
-
-.h1, .order {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox
-}
-
-.order__price span {
-    color: #775b25;
-    font-size: 26px
-}
-
-.order__price {
-    font-size: 19px;
-    margin-top: 10px
-}
-
-.button {
-    width: 110px;
-    background-color: #775b25;
-    padding: 15px 60px;
-    color: #fff;
-    margin: 20px 0 30px;
-    border: none;
-    font-size: 17px;
-    font-family: 'PT Sans', sans-serif;
-    text-decoration: none
-}
-
-.h1, .hr, .order, .picture .img {
-    width: 100%
-}
-
-.card__title, .h1 {
-    color: #70563d;
-    font-family: 'Noto Serif', serif
-}
-
-.order {
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center
-}
-
-.button:hover {
-    background-color: #9e8555;
-    text-align: center;
-    cursor: pointer
-}
-
-.h1 {
-    display: flex;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    text-transform: uppercase;
-    z-index: 1;
-    font-size: 42px;
-    margin-bottom: 50px
-}
-
-.card__title {
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(228, 208, 170, 0.55)), to(rgba(0, 0, 0, 0)));
+    background: -o-linear-gradient(bottom, rgba(228, 208, 170, 0.55), rgba(0, 0, 0, 0));
+    background: linear-gradient(to top, rgba(228, 208, 170, 0.55), rgba(0, 0, 0, 0)); }
+  body .container {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    font-size: 28px;
-    margin-bottom: 15px;
-    font-weight: 400;
-    -webkit-box-flex: 1;
-    -webkit-flex-grow: 1;
-    -ms-flex-positive: 1;
-    flex-grow: 1
-}
-
-.hr {
-    margin: 10px 0
-}
-
-.-grayscale {
-    -webkit-filter: grayscale(1);
-    filter: grayscale(1)
-}
-
-.-hide {
-    display: none
-}
-
-@media (max-width: 425px) {
-    .h1 {
-        font-size: 32px
-    }
-
-    .card__title {
-        font-size: 23px
-    }
-
-    .card {
-        margin: 17px 10px
-    }
-}
+        -ms-flex-pack: center;
+            justify-content: center; }
+    body .container .h1 {
+      color: #70563d;
+      width: 100%;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      text-transform: uppercase;
+      font-family: 'Noto Serif', serif;
+      z-index: 1;
+      font-size: 42px;
+      margin-bottom: 50px; }
+    body .container .box {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      width: auto;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      margin: 0 auto;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; }
+      body .container .box .card {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        max-width: 360px;
+        position: relative;
+        background-color: #fff;
+        margin: 17px; }
+        body .container .box .card__title {
+          color: #70563d;
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: center;
+          -webkit-justify-content: center;
+              -ms-flex-pack: center;
+                  justify-content: center;
+          font-size: 28px;
+          font-family: 'Noto Serif', serif;
+          margin-bottom: 15px;
+          font-weight: normal;
+          -webkit-box-flex: 1;
+          -webkit-flex-grow: 1;
+              -ms-flex-positive: 1;
+                  flex-grow: 1; }
+          @media (max-width: 425px) {
+            body .container .box .card__title {
+              font-size: 23px; } }
+        body .container .box .card__text {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: start;
+          -webkit-align-items: flex-start;
+              -ms-flex-align: start;
+                  align-items: flex-start;
+          margin-bottom: 18px;
+          -webkit-box-flex: 1;
+          -webkit-flex: 1;
+              -ms-flex: 1;
+                  flex: 1;
+          line-height: 22px; }
+        body .container .box .card__content {
+          padding: 0 20px 30px;
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -webkit-flex-direction: column;
+              -ms-flex-direction: column;
+                  flex-direction: column;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+              -ms-flex-align: center;
+                  align-items: center;
+          text-align: center;
+          height: 100%;
+          border: solid #d0bfa17d;
+          border-top: none; }
+        body .container .box .card:hover .card__image:before {
+          content: "";
+          background: url("../img/best_price.png") no-repeat;
+          margin: 5px;
+          padding: 5px;
+          position: absolute;
+          height: 50px;
+          width: 50px; }
+        body .container .box .card:hover .card__content {
+          border: solid #fff;
+          border-top: none; }
+        body .container .box .card.-grayscale {
+          -webkit-filter: grayscale(1);
+                  filter: grayscale(1); }
+        @media (max-width: 425px) {
+          body .container .box .card {
+            margin: 17px 10px; } }
+      body .container .box .order {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        width: 100%; }
+        body .container .box .order__price {
+          font-size: 19px;
+          margin-top: 10px;
+          font-family: 'Noto Serif', serif; }
+          body .container .box .order__price span {
+            color: #775b25;
+            font-size: 26px;
+            font-family: 'Noto Serif', serif; }
+        body .container .box .order .button {
+          width: 110px;
+          background-color: #775b25;
+          padding: 15px 60px;
+          color: #fff;
+          margin: 20px 0 30px;
+          border: none;
+          font-size: 17px;
+          font-family: 'PT Sans', sans-serif;
+          text-decoration: none; }
+          body .container .box .order .button:hover {
+            background-color: #9e8555;
+            text-align: center;
+            cursor: pointer; }
+          body .container .box .order .button .-hide {
+            display: none; }
+        @media (max-width: 425px) {
+          body .container .box .order {
+            font-size: 32px; } }
+      body .container .box .picture .img {
+        width: 100%; }
+      body .container .box .hr {
+        width: 100%;
+        margin: 10px 0; }
